Fixed post title wrapping ( in most browsers )

--- a/css/post.scss
+++ b/css/post.scss
@@ -25,6 +25,7 @@
 .postLink
 {
     margin-right: 5px;
+    display: contents;
 }
 
 .postInfoContainer {
